2017-07-14  Jeff Miller  <jeffm@apple.com>

        Add test for -[WKProcessPool _setObjectsForBundleParametersWithDictionary:].
        https://bugs.webkit.org/show_bug.cgi?id=174524

        Reviewed by Sam Weinig.

        * TestWebKitAPI/Tests/WebKit2Cocoa/BundleParameters.mm:
        (TEST):
        Renamed TestParameter to TestParameter1.
        Add test for -[WKProcessPool _setObjectsForBundleParametersWithDictionary:].

        * TestWebKitAPI/Tests/WebKit2Cocoa/BundleParametersPlugIn.mm:
        (-[BundleParametersPlugIn webProcessPlugIn:didCreateBrowserContextController:]):
        Observe changes for two bundle parameters.

        (-[BundleParametersPlugIn dealloc]):
        Remove observers for two bundle parameters.

2017-07-14  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r219510.
        https://bugs.webkit.org/show_bug.cgi?id=174525

        Need to revert length() == 0 check for null string (Requested
        by yusukesuzuki on #webkit).

        Reverted changeset:

        "[WTF] Newly added AtomicStringImpl should use BufferInternal
        static string if StringImpl is static"
        https://bugs.webkit.org/show_bug.cgi?id=174501
        http://trac.webkit.org/changeset/219510

2017-07-14  Jer Noble  <jer.noble@apple.com>

        [MSE] Removing samples when presentation order does not match decode order can cause bad behavior.
        https://bugs.webkit.org/show_bug.cgi?id=174514

        Reviewed by Sam Weinig.

        * TestWebKitAPI/Tests/WebCore/SampleMap.cpp:
        (TestWebKitAPI::TEST_F):

2017-07-14  Yusuke Suzuki  <utatane.tea@gmail.com>

        [WTF] Newly added AtomicStringImpl should use BufferInternal static string if StringImpl is static
        https://bugs.webkit.org/show_bug.cgi?id=174501

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/StringImpl.cpp:
        (TestWebKitAPI::TEST):

2017-07-14  Jonathan Bedard  <jbedard@apple.com>
